[metadata]
name = tpRigToolkit-tools-interpolateit
description = Tool to store/blend interpolate states of objects
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-tools-interpolateit

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    tpRigToolkit-core

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpRigToolkit/tools/interpolateit/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =